# cloudclaw

./: .gitignore  README.md  go.mod
cmd/cloudclaw/: main.go  main_test.go
cmd/exp-isolation-check/: main.go
cmd/exp-reset-db/: main.go
cmd/tasksim/: main.go
deploy/docker/: start-picoclaw-pool.sh  start-runtime-pool.sh  stop-picoclaw-pool.sh  stop-runtime-pool.sh
deploy/k8s/: cloudclaw-rbac.yaml  opencode-agent-pool.yaml  picoclaw-agent-pool.yaml
deploy/server/: cloudclawctl.sh
docs/: cloudclaw_sys_research.md
internal/core/: runner.go  runner_test.go
internal/dockerutil/: docker.go  docker_test.go
internal/engine/: docker_openclaw_executor.go  docker_picoclaw_executor.go  docker_picoclaw_executor_test.go  docker_runtime_executor.go  docker_runtime_executor_test.go  executor.go  k8s_picoclaw_executor.go  k8s_runtime_executor.go  picoclaw_common.go  picoclaw_common_test.go  runner.go  runtime_common.go  runtime_common_test.go  runtime_wrappers.go
internal/fsutil/: fsutil.go  fsutil_test.go
internal/k8sutil/: kubectl.go
internal/model/: types.go
internal/ports/: ports.go
internal/store/: store.go  store_test.go
internal/workspace/: local_manager.go  local_manager_test.go
pkg/cloudclaw/: client.go
scripts/experiments/: 00_postgres_down.sh  00_postgres_up.sh  01_throughput_latency.sh  02_fault_injection.sh  02_fault_recovery.sh  03_isolation_validation.sh  04_retry_priority_gain.sh  EXPERIMENT_RUNBOOK.md  README.md  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/cloudclaw/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+36 files in other folders)
