[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudclaw-sdk"
version = "0.1.0"
description = "Python SDK for CloudClaw CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CloudClaw" }]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudclaw*"]
